--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
             <LI>CCNA</LI>
             <li>Web Development</li>
         </ul><hr>
-        <a href="../Web resources/Contact.html">Contact</a>
+        <a href="./Contact.html">Contact</a>
 </body>
 </html>
